# yams-srv-agent

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: config.json  mod.rs
src/handler/: mod.rs
src/http/: mod.rs
src/http/api/: mod.rs
src/http/handlers/: mod.rs  router.rs  status.rs  system_info.rs
src/http/middleware/: logger.rs  mod.rs  origin.rs  query_params.rs  totp.rs
src/http/service/: collect.rs  mod.rs
src/logger/: mod.rs
src/models/: app.rs  components.rs  cpu.rs  disks.rs  generic_info.rs  mod.rs  networks.rs  process.rs
src/util/: graceful_util.rs  hyper_util.rs  iostat.rs  mod.rs
