[package]
name = "sys_agent"
version = "0.1.0"
edition = "2021"
authors = ["Bartashevich Igor", "bartigorfs"]
description = "Part of SysWatch"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
chrono = "0.4.38"
serde_json = "1.0.117"
sysinfo = "0.30.12"
tiny_http = "0.12.0"
once_cell = "1.19.0"
headers = "0.4.0"
serde = { version = "1.0.202", features = ["derive"] }
