[package]
name = "sys_agent"
version = "0.1.0"
edition = "2021"
authors = ["Bartashevich Igor", "bartigorfs"]
description = "Part of SysWatch"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
chrono = "0.4.38"
serde_json = "1.0.117"
sysinfo = "0.31.2"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
bytes-utils = "0.1.4"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }
bytes = "1.5.0"
tokio-signal = "0.2.9"
tower = "0.4.13"
lazy_static = "1.5.0"
jwt = "0.16.0"
